[build-system]

requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]

name = "mermaidmro"
description = "Create mermaid graphs from the method resolution order (mro) of Python objects."
authors = [
    {name = "Marcel Rieger", email = "github.riga@icloud.com"},
]
keywords = [
    "mro",
    "graph",
    "inheritance",
    "mermaid",
    "dag",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
]
license = {file = "LICENSE"}
requires-python = ">=3.7"
dynamic = ["version", "readme", "dependencies", "optional-dependencies"]


[project.urls]

Homepage = "https://github.com/riga/mermaidmro"
Documentation = "https://mermaidmro.readthedocs.io"
Repository = "https://github.com/riga/mermaidmro.git"


[tool.setuptools.dynamic]

version = {attr = "mermaidmro.__meta__.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = {file = ["requirements_dev.txt"]}}


[project.scripts]

mermaidmro = "mermaidmro:main"


[tool.setuptools]

include-package-data = false


[tool.setuptools.packages.find]

include = ["mermaidmro"]
exclude = ["tests/*"]
